2005-05-29 14:25 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c started a --validate option to test and validate cost
	* src/unit_main.c added gridCOST_CNST_AREAUV to gridSetCostConstraint

2005-05-29 13:45 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotInvalid) added to dump surf
	and invalid tets.
	* src/gridfortran.c (gridwritetecplotsurfacezone_) simplified
	and called gridWriteTecplotInvalid.

2005-05-29 13:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeRatio) use ratio to calculate new
	edge and face parameters.

2005-05-29 13:12 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeRatio,gridSplitEdgeAt) changed 
	gridSplitEdgeAt into gridSplitEdgeRatio to allow for consistant
	treatment of CAD edge and face parameters.
	* src/gridinsert.c (gridParallelEdgeSplit) calls gridSplitEdgeRatio

2005-05-29 12:20 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c Removed -m gridmove projection option.
	Always use gridmove to project.

2005-04-22 12:00 Bill Jones <w.t.jones@larc.nasa.gov>
	* src/gridfortran.c added gridcopyunusednodeGlobal() and
	gridcopyunusedcellGlobal() functions to support new parallel removal
	of unused data.

2005-04-18 17:10 Bill Jones <w.t.jones@larc.nasa.gov>
	* src/FAKEGeom.h updated signature of LoadModel for CAPRI 2 use
	* src/FAKEGeomExtras.c updated signature of LoadModel for CAPRI 2 use

2005-04-18 16:10 Bill Jones <w.t.jones@larc.nasa.gov>
	* src/grid.h (struct Grid) "model" member added unconditionally
	* src/grid.c (gridImport) "model" initialized to -1

2005-04-18 16:05 Bill Jones <w.t.jones@larc.nasa.gov>

	* This revision marks a change to the API to support CAPRI 2
	* src/gridfortran.c (gridparallelloadcapri_) add "url" argument
	to support client/server CAPRI 2 use.
	* src/grid.h (struct Grid) add "model" member to store CAPRI 2
	model index.
	* src/gridgeom.c (gridParallelGeomLoad) add "url" argument
	to support client/server CAPRI 2 use and use CADGeom_LoadModel()