@@ -21,6 +21,8 @@ BEGIN_C_DECLORATION
 
 #define gridADAPT_COST_FLOOR (0.01)
 
+Grid *gridWriteTecplotInvalid(Grid *g, char *filename );
+
 Grid *gridSetMapWithSpacingVectors(Grid *g, int node,
 				   double *v1, double *v2, double *v3,
                                    double s1, double s2, double s3);
